create an update of style.css and index.html

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -2,8 +2,10 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <meta name="viewpoint" content="width=device-width" initial-scale="1.0">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My First Portfolio</title>
+        <link href="base.css" rel="stylesheet">
+        <link href="styles.css" rel="stylesheet">
     </head>
     <body>
         <header>
@@ -12,8 +14,7 @@
             <li><a href="tweets.html">Tweets</a></li>
 
         </ul>
-        <link href="base.css" rel="stylesheet">
-        <link href="styles.css" rel="stylesheet">
+        
 
     </header>
     <main> 
