create an update of both index.html and style.css

--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -7,9 +7,10 @@
         <link href="base.css" rel="stylesheet">
         <link href="styles.css" rel="stylesheet">
     </head>
-    <body>
+    <body class="works_on_smartphone">
         <header>
         <ul>
+            <li class="logo">&spades;</li>
             <li><a href="index.html">Home</a></li>
             <li><a href="tweets.html">Tweets</a></li>
 
@@ -70,7 +71,7 @@
         </aside>
         </main>
         <footer>
-            <p>Made by MIHRET - <a href="https://x.com/mem_kee95569/status/1919279737265918384" target="_blank"></a></p>
+            <p>Made by MIHRET - <a href="https://x.com/mem_kee95569/status/1919279737265918384" target="_blank">My Tweet</a></p>
         </footer>
         <p><a href="tweets.html">see My Tweets</a></p>
 
